Fix dark mode for Token Selector dialog
Summary:
Replace hardcoded background color `#f7f7f7` for token buttons in the Token selector dialog with variable `{$lightgreybackground}`. It is the same color.

Refs T15056

Test Plan:
* Go to http://phorge.localhost/settings/panel/display/ and set `Accessibility` to `Dark Mode (Experimental)`
* Go to http://phorge.localhost/T1, select "Award Token" from the sidebar

Reviewers: O1 Blessed Committers, mainframe98

Reviewed By: O1 Blessed Committers, mainframe98

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15056

Differential Revision: https://we.phorge.it/D26154

--- a/webroot/rsrc/css/application/tokens/tokens.css
+++ b/webroot/rsrc/css/application/tokens/tokens.css
@@ -3,7 +3,7 @@
  */
 
 button.token-button {
-  background: #f7f7f7;
+  background: {$lightgreybackground};
   border: 1px solid {$lightblueborder};
   position: relative;
   width: 16px;
